Fixed inspection warnings and added meaningful API Javadocs.